--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Dipam Store</title>
+  <title>D-Store</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
   <style>
     body { margin:0; font-family: Arial, sans-serif; background:#f1f3f6; }
@@ -52,7 +52,7 @@
 <body>
 
 <header>
-  <h1 onclick="goHome()">Dipam Store</h1>
+  <h1 onclick="goHome()">D-Store</h1>
   <div class="search-box">
     <input type="text" id="searchInput" placeholder="Search products...">
     <button onclick="searchProducts()">Search</button>
