--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <title>D-Store</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
   <style>
-    body { margin:0; font-family: Arial, sans-serif; background:#f1f3f6; }
+    body { margin:0; font-family: Arial, sans-serif; background:#d9d7f1; }
     header {
-      background:#2874f0; color:white; padding:10px 20px;
+      background:#57dbdb; color:white; padding:10px 20px;
       display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap;
     }
     header h1 { margin:0; font-size:22px; cursor:pointer; }
     .header-buttons { display:flex; gap:10px; align-items:center; flex-wrap:wrap; }
     .btn-header {
-      background:#ff9f00; border:none; padding:8px 15px; color:white;
+      background:#5e6ecb; border:none; padding:8px 15px; color:white;
       cursor:pointer; font-weight:bold; border-radius:4px;
     }
     .search-box {
@@ -23,7 +23,7 @@
       border:none; padding:8px; outline:none; width:200px;
     }
     .search-box button {
-      background:#ff9f00; border:none; padding:8px; cursor:pointer; color:white;
+      background:#5e6ecb; border:none; padding:8px; cursor:pointer; color:white;
     }
     .product-grid {
       display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
