--- a/index.html
+++ b/index.html
@@ -217,12 +217,12 @@ const EMAILJS_SERVICE_ID = 'service_c4p68ag';
 const EMAILJS_TEMPLATE_ID = 'template_214uijp';
 
 const firebaseConfig = {
-  apiKey: 'YOUR_API_KEY',
-  authDomain: 'YOUR_PROJECT_ID.firebaseapp.com',
-  projectId: 'YOUR_PROJECT_ID',
-  storageBucket: 'YOUR_PROJECT_ID.appspot.com',
-  messagingSenderId: 'YOUR_SENDER_ID',
-  appId: 'YOUR_APP_ID'
+  apiKey: 'AIzaSyC5MGkOf5_0cF-xQrcA1PBSSvq6Y-AarSc',
+  authDomain: 'ds-mart-888d2.firebaseapp.com',
+  projectId: 'ds-mart-888d2',
+  storageBucket: 'ds-mart-888d2.firebasestorage.app',
+  messagingSenderId: '108308848034',
+  appId: '1:108308848034:web:a8b3fe5e8784a4771e66fb'
 };
 const OWNER_EMAIL = 'dipamghosh85@gmail.com';
 
