--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8' />
 <meta name='viewport' content='width=device-width,initial-scale=1' />
-<title>DS-MART</title>
+<title>Copiate</title>
 <script src='https://cdn.jsdelivr.net/npm/emailjs-com@3.2.0/dist/email.min.js'></script>
 <script src='https://www.gstatic.com/firebasejs/10.12.4/firebase-app-compat.js'></script>
 <script src='https://www.gstatic.com/firebasejs/10.12.4/firebase-auth-compat.js'></script>
