--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ main{display:grid;grid-template-columns:250px 1fr;gap:16px;margin-top:14px}
 <body>
 <div class='app' id='app'>
   <header>
-    <div class='logo' id='homeBtn'>DS-MART</div>
+    <div class='logo' id='homeBtn'>Copiate</div>
     <div class='search'>
       <input id='searchInput' placeholder='Search for products, brands and more' />
       <button class='icon-btn' id='searchBtn'>Search</button>
