--- a/index.html
+++ b/index.html
@@ -315,6 +315,28 @@ function renderProducts(){
   renderCategories();
   renderAdminProducts();
 }
+
+function renderAdminProducts(){
+  adminProductList.innerHTML = '';
+  if (products.length===0) { adminProductList.innerHTML = '<div class="small">No products yet</div>'; return; }
+  products.forEach((p, idx)=>{
+    const d = document.createElement('div');
+    d.style.display='flex'; d.style.gap='8px'; d.style.alignItems='center';
+    d.innerHTML = `
+      <img src="${p.image}" style="width:52px;height:52px;object-fit:cover;border-radius:6px" />
+      <div style="flex:1">
+        <div style="font-weight:700">${escapeHtml(p.title)}</div>
+        <div class="small">${escapeHtml(p.category)} • ${fmt(p.price)}</div>
+      </div>
+      <div style="display:flex;gap:6px">
+        <button class="btn ghost" data-idx="${idx}" data-action="edit">Edit</button>
+        <button class="btn" data-idx="${idx}" data-action="del">Delete</button>
+      </div>
+    `;
+    adminProductList.appendChild(d);
+  });
+}
+  
 const cartDrawer = el('cartDrawer');
 const cartBody = el('cartBody');
 const cartTotalEl = el('cartTotal');
